# VotingInfo

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/certs/: globalsign_atlas_r3_ov_tls_ca_2026_q1.pem
backend/data/: state_registration_sources.md  state_registration_urls.json
backend/src/: errors.rs  lib.rs  main.rs  middleware.rs
backend/src/models/: mod.rs
backend/src/routes/: elections.rs  mod.rs  scraper.rs
backend/src/services/: al_scraper.rs  civic_api.rs  geocoder.rs  mod.rs  pa_scraper.rs  state_registration.rs  supabase.rs
backend/tests/: integration.rs
docs/: DEPLOYMENT.md
frontend/: Dockerfile  middleware.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/app/all-elections/: page.tsx
frontend/src/app/elections/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/polling/: page.tsx
frontend/src/app/registration/: page.tsx
frontend/src/app/registration-dates/: page.tsx
frontend/src/app/voter-info/: page.tsx
frontend/src/components/: AddressForm.tsx  CandidateCard.tsx  Footer.tsx  Header.tsx  LocaleSwitcher.tsx  PollingLocationCard.tsx  PollingMap.tsx  Providers.tsx
frontend/src/contexts/: AuthContext.tsx  LocaleContext.tsx
frontend/src/lib/: api.ts
frontend/src/messages/: en.ts  es.ts
supabase/migrations/: 20260327003038_pa_scraper.sql  20260405133000_al_scraper.sql
(+2 files in other folders)
