[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
moka = { version = "0.12", features = ["future"] }
tower_governor = { version = "0.4", features = [] }
scraper = "0.20"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
wiremock = "0.6"
http-body-util = "0.1"
